crates/rspack_error/tests/fixtures/tsx_syntax_error/fixtures__tsx_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
expression: tsx_syntax_error
---
ModuleParseError

  × Module parse failed:
  ╰─▶   × TSX parsing error: Unexpected token `test`. Expected jsx identifier
         ╭────
       1 │ let c = <test>/test>;
         ·          ──┬─
         ·            ╰── Unexpected token `test`. Expected jsx identifier
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

